FP added routes to pages

--- a/comprint-order-system/public/index.html
+++ b/comprint-order-system/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title> Comprint Order System </title>
-  <link href="public/vendors/bootstrap/bootstrap.min.css" rel="stylesheet"/>
+  <link href="../src/vendors/bootstrap/bootstrap.min.css" rel="stylesheet"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
